This is just to motivate myself to improve a little bit every day :)

Best: 32

10-12-2024
Streak: 2
Learned:
Did:
    - Add custom floating action buttons that do allow you to change alignment of content - based on existing compose fabs.
    - Make ChecklistSubMenu use the new fabs

9-12-2024
Streak: 1
Learned:
Did:
    - Rename ChecklistButton, MainTaskButton and SubTaskButton to make their function & relations clearer.
    - Make MainTaskButton use Strings instead of StringResources (necessary if we want user input customisation).
    - Rename ChiaroscuroDrawable to just Chiaroscuro, add getPainter method as well as getDrawable. Apply Linting.

6-12-2024
Streak: 2
Learned:
Did:
    - Fix icon (xml) for Cosmeticism button. Colours are hardcoded, but same is true for pngs. Confirmed working on iOS.
    - Start prototyping a ChecklistSubMenu composable for the DayPartMenu buttons.
    - WIP: Further implement subtask list for DayPartMenuButtons

5-12-2024
Streak: 1
Learned:
Did:
    - Add inverted colour icons for all png icons
    - Globally set DarkTheme for the app through CompositionLocal, instead of in multiple places
    - Add reusable ChiaroscuroDrawable which returns a drawable resource based on whether dark theme is active
    - Make morning menu buttons use ChiaroscuroDrawable

28-11-2024
Streak: 1
Learned:
Did:
    - Morning buttons: Put content in individual items & Space between buttons of column & Fix icon/text/button sizes and proportions
    - Linting & Display morning buttons only if morning state

11-11-2024
Streak: 1
Learned:
Did:
    - Tweaked/Fixed some colours in theme, dark mode didn't look right
    - Update backlog

5-11-2024
Streak: 1
Learned:
Did:
    - Add titular greeting to DayPartMenu
    - Fix first day of Winter (today)

24-10-2024
Streak: 1
Learned:
Did:
    - Add icons and other assets from Java Zealotry project
    - Change IconTextButton to IconTextTimeButton
    - Add strings for (main) morning button names